Added recipes into wantanmee.html
Added all the recipes unordered list to the html document

--- a/recipes/wantanmee.html
+++ b/recipes/wantanmee.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wantan Mee Recipes</title>
 </head>
+
+
 <body>
+    <h1>Basic Wantans:</h1>
+        <ul>
+            <li>Wonton Wrappers</li>
+            <li>200g ground chicken thighs or pork</li>
+            <li>1/2 TSP salt</li>
+            <li>1/4 TSP ground white pepper</li>
+            <li>Garlic Chives/Spring Onions</li>
+        </ul>
+
+    <h1>Toppings and Noodles:</h1>
+        <ul>
+            <li>100g dried shrimp or scallop noodles</li>
+            <li>3 wontons</li>
+            <li>50-80g char sui (Chinese BBQ Pork/Chicken), thinly sliced</li>
+            <li>Chinese greens i.e. choy sum (or kai lan, but just the leafy part), cut into 4cm lengths</li>
+            <li>1 spring onion (green part only), thinly sliced on the diagonal</li>
+            <li>A dash of ground white pepper</li>
+            <li>Sliced green pickled chillies</li>
+        </ul>
     
+    <h1>Sauce:</h1>
+        <ul>
+            <li>1 TSP duck fat or pork lard (plus a few bits of pork crackling, if available)</li>
+            <li>1 TSP thick sweet soya sauce (kecap manis)</li>
+            <li>1 TSP light soya sauce</li>
+            <li>1/2 TSP dark soya sauce</li>
+            <li>A pinch of salt</li>
+            <li>A dash of sesame oil</li>
+        </ul>
+
 </body>
 </html>
