--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
-    
+    <h1>Odin Recipes</h1>
+    <a href="./recipes/wantanmee.html">
+        <ol>
+            <li>wantan mee</li>
+        </ol>
+    </a>
 </body>
 </html>
