--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/wantanmee.html">
+    <a href="./recipes/wantanmee.html" rel="noopener noreferrer">
         <ol>
             <li>wantan mee</li>
         </ol>
