Added img and new attribute
Added wonton mee picture into recipes and given anchor a new attribute rel

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Odin Recipes</h1>
     <a href="./recipes/wantanmee.html" rel="noopener noreferrer">
         <ol>
-            <li>wantan mee</li>
+            <li>wonton mee</li>
         </ol>
     </a>
 </body>
