--- a/recipes/wantanmee.html
+++ b/recipes/wantanmee.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wantan Mee Recipes</title>
+    <title>Wonton Mee Recipes</title>
 </head>
 
 
