--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="" rel="noopener noreferrer">
                 <li>Angela's Awesome Enchiladas</li>
             </a>
-            <a href="" rel="noopener noreferrer">
+            <a href="./recipes/casserole.html" rel="noopener noreferrer">
                 <li>Minestrone Casserole</li>
             </a>
         </ol>
