--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="./recipes/wantanmee.html" rel="noopener noreferrer">
                 <li>wonton mee</li>
             </a>
-            <a href="" rel="noopener noreferrer">
+            <a href="./recipes/enchiladas.html" rel="noopener noreferrer">
                 <li>Angela's Awesome Enchiladas</li>
             </a>
             <a href="./recipes/casserole.html" rel="noopener noreferrer">
