--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Casserole</h1>
+    <img src="../img/main.png" alt="Fully cooked casserole" height="310" width="310">
 
     <h3>Ingredients</h3>
     <ul>
@@ -35,6 +36,7 @@
         <li>
             Step 1
             <p>Gather all ingredients.</p>
+            <img src="../img/Step1.png" alt="Step 1" height="310" width="310">
         </li>
         <li>
             Step 2
@@ -49,6 +51,7 @@
                 Bring a large pot of water to a boil. Add pasta and cook, covered, for the minimum time 
                 according to package directions. Drain and transfer to a large bowl.
             </p>
+            <img src="../img/step3.png" alt="Step 3" height="310" width="310">
         </li>
         <li>
             Step 4 
@@ -57,6 +60,7 @@
                 stirring occasionally, until carrots are just tender, 5 to 8 minutes. Add zucchini and garlic. 
                 Cook and stir 1 minute more.
             </p>
+            <img src="../img/step4.png" alt="Step 4" height="310" width="310">
         </li>
         <li>
             Step 5
@@ -65,6 +69,7 @@
                 Italian seasoning, salt, and pepper to the bowl of pasta. Stir well to combine. 
                 Transfer pasta mixture to the prepared dish and cover with foil. 
             </p>
+            <img src="../img/step5.png" alt="Step 5" height="310" width="310">
         </li>
         <li>
             Step 6
@@ -73,6 +78,7 @@
                 continue baking until heated through and cheese is melted,10 to 15 minutes. 
                 Top each serving with remaining Parmesan cheese and sprinkle with fresh herbs.
             </p>
+            <img src="../img/step6.png" alt="Step 6" height="310" width="310">
         </li>
     </ol>
 
