--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Enchiladas</h1>
-    
+    <img src="../img/enchiladas/image.png" alt="Enchiladas" height="310" width="310">
+
     <h3>Ingredients</h3>
     <ol>
         <li>
