--- a/recipes/wantanmee.html
+++ b/recipes/wantanmee.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Wonton mee</h1>
 
-    <img src="../img/wontonmee.jpg" alt="wonton mee picture" height="310" width="310">
+    <img src="../img/wantanmee/wontonmee.jpg alt="wonton mee picture" height="310" width="310">
 
     <h3>Basic Wontons:</h3>
         <ul>
