Delete repeated image
Deleted and removed duplicated image from enchiladas directory and .html

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -189,8 +189,9 @@
             Bake in the preheated oven until filling is heated through and cheese is melted and bubbling, 
             about 25 minutes.
         </p>
-        <img src="../img/enchiladas/Step9.png" alt="Step 9 image" height="310" width="310">
     </ol>
+
+    <a href="../index.html">Home</a>
     
 </body>
 </html>
